# vae-intro

./: LICENSE  README.md  pyproject.toml  requirements.txt
config/: cifar10.yaml  conv.yaml  dense.yaml  mnist_cont.yaml  mnist_conv.yaml  mnist_dense.yaml
notebooks/: binarized_mnist.ipynb  cifar10.ipynb  intro.ipynb  mnist.ipynb
scripts/: main.py  make_gen_gif.py  make_gif.py  make_lat_gif.py  train_bernoulli_vae.py  train_gaussian_vae.py  train_vae.py
src/varautoenc/: __init__.py  vis.py
src/varautoenc/data/: __init__.py  base.py  cifar.py  mnist.py  utils.py
src/varautoenc/layers/: __init__.py  conv.py  dense.py  prob.py  utils.py
src/varautoenc/model/: __init__.py  conv.py  dense.py
src/varautoenc/vae/: __init__.py  base.py  conv.py  dense.py  lr_schedule.py  utils.py
varautoenc/: __init__.py  data.py  vis.py
varautoenc/data/: __init__.py  base.py  cifar.py  mnist.py  modules.py  utils.py
varautoenc/layers/: __init__.py  conv.py  dense.py  prob.py  utils.py
varautoenc/model/: __init__.py  conv.py  dense.py  prob.py
varautoenc/vae/: __init__.py  base.py  bernoulli.py  conv.py  dense.py  gauss.py  utils.py
