[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "varautoenc"
version = "0.0.1"
description = "Introduction to variational autoencoders"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Joseph Nagel", email = "JosephBNagel@gmail.com"}
]
keywords = ["VAE", "generative model"]
dependencies = [
    "numpy",
    "torch",
    "torchvision",
    "lightning",
    "tensorboard",
    "mlflow",
    "pillow",
    "matplotlib",
    "notebook"
]

[project.urls]
source = "https://github.com/joseph-nagel/vae-intro"
